syntax = "proto3";

package runmapi;

message Property {
    string key = 1;
    string value = 2;
}

// Indicates whether a particular property item may be changed or read by a
// class of user
message PropertyPermission {
    // The project this property's permissions are scoped to. Empty string
    // indicates all projects (GLOBAL)
    string project = 1;
    // The role this property's permissions are scoped to. Empty string
    // indicates all roles in any of the scoped projects
    string role = 2;
    // The read/write permissions on the property. The default permissions for
    // any property on an object is that if a user is allowed to read the
    // object, the user is allowed to read all properties associated with the
    // object. To deny read permission to a particular role or project, a
    // PropertyAccessPermission can be created with a zero-valued permission
    // field, which indicates the role and/or project cannot read the property.
    //
    // 0            No permissions  (used to deny rights to specific project)
    // 1            Read permission
    // 1 << 1       Write permission
    uint32 permission = 3;
}

// Properties on certain objects (providers, provider groups, consumers, etc)
// can be constrained by administrators applying a property definition to them
message PropertyPermissions {
    // The property key to apply the property definition to. e.g. "architecture"
    string key = 1;
    // Collection of access permissions applied to this property
    repeated PropertyPermission permissions = 50;
}
